--- a/locations.html
+++ b/locations.html
@@ -6,7 +6,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="dog.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="menu.html">Menu</a></li>
 					<li class="logo"><a href="dog.html">Dog Kennel Logo</a></li>
 				<li><a href="locations.html">Locations</a></li>
